# engine-comparison-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  bench_multimodal.py  bench_tabular.py  data_loader.py  docker-compose.yml  pyproject.toml
benchmarks/: multimodal_results.json  rust_multimodal_results.json  rust_tabular_results.json  tabular_results.json
distributed/: README.md  spark_etl.py
docs/: architecture.md
notebook/: distributed_daft.ipynb  distributed_ray.ipynb  distributed_spark.ipynb  engine_comparison_examples.ipynb
rust_benchmark/: Cargo.toml
rust_benchmark/src/: main.rs
scripts/: docker-run-daft.sh  docker-run-ray.sh  docker-run-spark.sh  run_benchmarks.sh  upload-data.sh
src/engine_comparison/: __init__.py  constants.py
src/engine_comparison/benchmarks/: __init__.py  aggregate.py  multimodal.py  tabular.py
src/engine_comparison/cli/: __init__.py  create_image_metadata.py  upload.py
src/engine_comparison/data/: __init__.py  loader.py
src/engine_comparison/distributed/: __init__.py  daft_pipeline.py  ray_inference.py  spark_etl.py
